# fmri-prep

./: .gitignore  BIDS_STRUCTURE_INFO.md  FREESURFER_LICENSE_INSTRUCTIONS.md  README.md  dataset_description.json  dcm2bids_config.json  gui_app.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py
config/: dcm2bids_config.json
docs/: BIDS_CONVERSION_GUIDE.md  FMRIPREP_GUIDE.md
scripts/: extract_series_descriptions.py  run_fmriprep.sh  run_pipeline.py  setup_dummy_data.py  setup_env.sh  setup_test_data.py
src/: __init__.py  gui_app.py  orchestrator.py  pipeline.py  run_fmriprep.py  run_pipeline.py
src/bids/: __init__.py  analyzer.py  converter.py
src/core/: __init__.py  discovery.py  progress.py  utils.py
src/fmriprep/: __init__.py  runner.py
src/gui/: __init__.py  app.py
src/reporting/: __init__.py  report.py
test/: __init__.py  conftest.py  test_config.py  test_fmriprep_options.py  test_gui.py  test_pipeline.py
thesis/: BIBLIOGRAPHY.bib  README.md  SUPPLEMENTARY_MATERIALS.md  THESIS_PAPER.docx  THESIS_PAPER.md
thesis/figures/: FIGURES_GUIDE.md
