[project]
name = "fmri-preprocessing-assistant"
version = "1.0.0"
description = "fMRI Preprocessing Assistant - BIDS conversion and fMRIPrep pipeline"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.9"
extraPaths = ["src"]
include = ["src", "test"]

